# Battle-Sim-2

./: I-stats  MANIFEST.in  Player-stats  README.md  battleSim2.py  pyproject.toml
battlesim2/: Player-stats  __main__.py  cli.py  core.py  utils.py
saves/: Player-stats
src/battlesim2/: __main__.py  cli.py  core.py
src/battlesim2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
