[project]
name = "battlesim2"
version = "0.3.2a1"
description = "A command-line battle simulation game"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
	"pygame-ce"
]

[project.scripts]
battlesim2 = "battlesim2.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"battlesim2" = ["assets/*.png", "assets/*.ico"]
